--- a/src/Main/Main.css
+++ b/src/Main/Main.css
@@ -3,3 +3,6 @@
 /* font */
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
 
+.main-body{
+  padding-top: 145px;
+}
