--- a/src/Mypage/Mypage.css
+++ b/src/Mypage/Mypage.css
@@ -3,6 +3,9 @@
 /* font */
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
 
+.mypage-body {
+  padding-top: 145px;
+}
 
 .sidebar {
   display: flex;
